# sfml-cmake-template

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
.github/workflows/: daily-build.yml
include/: Game.h
src/: Game.cpp  main.cpp
